// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Field /> UI Snapshot renders with label and labelFor 1`] = `
.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 1rem;
}

.emotion-0 {
  color: #524D6E;
  font-size: 0.75rem;
  line-height: 1.67;
}

.emotion-6 svg {
  display: none;
}

.emotion-2 {
  color: #524D6E;
  font-size: 1rem;
  line-height: 1.75;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #ffffff;
  border: 1px solid #ededf0;
  border-radius: 0;
  color: #524D6E;
  padding: 13px 1rem;
  -webkit-transition: border-color 350ms;
  transition: border-color 350ms;
  width: 100%;
  outline: none;
}

.emotion-2 ~ ul .e10x1bpj2 {
  -webkit-transition: opacity 350ms;
  transition: opacity 350ms;
  max-height: 0 !important;
  opacity: 0 !important;
}

.emotion-2:active,
.emotion-2:focus {
  outline: none;
  border-color: #332e54;
  box-shadow: 0 0 2px 2px rgba(166,161,226,0.5);
}

.emotion-2:active ~ ul .e10x1bpj2,
.emotion-2:focus ~ ul .e10x1bpj2 {
  max-height: 50px !important;
  opacity: 1 !important;
}

.emotion-2::-webkit-input-placeholder {
  color: #c3c0cd;
}

.emotion-2::-moz-placeholder {
  color: #c3c0cd;
}

.emotion-2:-ms-input-placeholder {
  color: #c3c0cd;
}

.emotion-2::placeholder {
  color: #c3c0cd;
}

.emotion-2[disabled] {
  background-color: #ededf0;
  color: #c3c0cd;
  cursor: not-allowed;
  border: 1px solid #ededf0;
  box-shadow: none;
}

.emotion-4 {
  list-style-type: none;
  margin: 8px 0;
  min-height: 23px;
}

<div
  className="emotion-8 emotion-9"
>
  <label
    className="emotion-0 emotion-1"
    htmlFor="for-input-id"
  >
    Test Label
  </label>
  <div
    className="emotion-6 emotion-7"
  >
    <svg />
    <input
      className="emotion-2 emotion-3"
    />
    <ul
      className="emotion-4 emotion-5"
    />
  </div>
</div>
`;

exports[`<Field /> UI Snapshot renders with label prop 1`] = `
.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 1rem;
}

.emotion-0 {
  color: #524D6E;
  font-size: 0.75rem;
  line-height: 1.67;
}

.emotion-6 svg {
  display: none;
}

.emotion-2 {
  color: #524D6E;
  font-size: 1rem;
  line-height: 1.75;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #ffffff;
  border: 1px solid #ededf0;
  border-radius: 0;
  color: #524D6E;
  padding: 13px 1rem;
  -webkit-transition: border-color 350ms;
  transition: border-color 350ms;
  width: 100%;
  outline: none;
}

.emotion-2 ~ ul .e10x1bpj2 {
  -webkit-transition: opacity 350ms;
  transition: opacity 350ms;
  max-height: 0 !important;
  opacity: 0 !important;
}

.emotion-2:active,
.emotion-2:focus {
  outline: none;
  border-color: #332e54;
  box-shadow: 0 0 2px 2px rgba(166,161,226,0.5);
}

.emotion-2:active ~ ul .e10x1bpj2,
.emotion-2:focus ~ ul .e10x1bpj2 {
  max-height: 50px !important;
  opacity: 1 !important;
}

.emotion-2::-webkit-input-placeholder {
  color: #c3c0cd;
}

.emotion-2::-moz-placeholder {
  color: #c3c0cd;
}

.emotion-2:-ms-input-placeholder {
  color: #c3c0cd;
}

.emotion-2::placeholder {
  color: #c3c0cd;
}

.emotion-2[disabled] {
  background-color: #ededf0;
  color: #c3c0cd;
  cursor: not-allowed;
  border: 1px solid #ededf0;
  box-shadow: none;
}

.emotion-4 {
  list-style-type: none;
  margin: 8px 0;
  min-height: 23px;
}

<div
  className="emotion-8 emotion-9"
>
  <label
    className="emotion-0 emotion-1"
    htmlFor="Test Label"
  >
    Test Label
  </label>
  <div
    className="emotion-6 emotion-7"
  >
    <svg />
    <input
      className="emotion-2 emotion-3"
    />
    <ul
      className="emotion-4 emotion-5"
    />
  </div>
</div>
`;
